# Final_project_Control

./: CMakeLists.txt  README.md  package.xml
launch/: display.launch.py
meshes/: G_13.stl  G_2.stl  G_25.stl  G_27.stl  G_28.stl  G_4.stl  G_5.stl  G_50.stl  G_7.stl  base.stl  endpoint.stl  joint1.stl  joint2.stl  joint3.stl  joint4.stl  joint5.stl
src/: action.py  calibrate_origin_keyboard.py  client.py  execute.py  hello.py  plan_and_execute.py  real_execute.py  realtime_control.py  rviz.py  sync.py  teleoperate.py  test.py  test1.py  test_motor.py  where.py  workspace.py
src/floor1/: bus.py  config.py  motor_core.py
urdf/: arm1_URDF.urdf  arm1_URDF_plus.urdf  arm1_URDF_plus1.urdf  arm_3.urdf  arm_3_180mm.urdf
